# baresql

./: .gitignore  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
baresql/: __init__.py  baresql.py
examples/: baresql_with_cte.ipynb  baresql_with_cte_code_included.ipynb  cte_to_sqlite.ipynb  cte_to_sqlite.py  cte_to_sqlite_demo.ipynb  sqlite_py_manager.py
examples/PY_Excel/: README.txt  for_PY_Excel_baresql_part1.txt  for_PY_Excel_baresql_part2.txt  for_PY_Excel_example1.txt
